force-app/main/default/objects/Match__c/Match__c.object-meta.xml
<CustomObject>
    <description>Junction of Care Need and Provider Profile, carrying the match score, reason, and lifecycle status.</description>
    <label>Match</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Match Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>