force-app/main/default/objects/Match__c/fields/Care_Need__c.field-meta.xml
<CustomField>
    <fullName>Care_Need__c</fullName>
    <label>Care Need</label>
    <referenceTo>Care_Need__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The request being matched.</description>
</CustomField>