force-app/main/default/objects/Match__c/fields/Match_Reason__c.field-meta.xml
<CustomField>
    <fullName>Match_Reason__c</fullName>
    <label>Match Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
    <description>Human-readable explanation of why this provider matched. Assembled from the same fields that produced the score.</description>
</CustomField>