force-app/main/default/objects/Match__c/fields/Provider_Profile__c.field-meta.xml
<CustomField>
    <fullName>Provider_Profile__c</fullName>
    <label>Provider Profile</label>
    <referenceTo>Provider_Profile__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The suggested provider.</description>
</CustomField>