force-app/main/default/objects/Match__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <required>true</required>
    <description>0-100 normalized ranking score from MatchProviders.</description>
</CustomField>